# socless

./: .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docs-requirements.txt  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg  sitemap.xml
about/: index.html
betterment-template/: index.html
betterments-list/: index.html
collect-information-using-a-slack-dialog/: index.html
common/: requirements.txt
deploy-socless-slack/: index.html
deploying-socless/: index.html
docs/: about.md  betterment-template.md  betterments-list.md  collect-information-using-a-slack-dialog.md  deploy-socless-slack.md  deploying-socless.md  event-deduplication.md  faqs.md  getting-started.md  human-interaction-architecture.md  human-interaction-overview.md  index.md  key-concepts-and-terms.md  making-choices-in-playbooks.md  parameter-references-and-template-variables.md  prompting-a-user-for-confirmation.md  socless-and-serverless.md  socless-architecture.md  socless-vs-stock-stepfunctions.md  state-management-in-socless.md  test-your-first-playbook.md  tutorial-interacting-with-humans-via-slack.md  your-first-endpoint.md  your-first-integration-geolocating-an-ip.md  your-first-playbook.md  your-second-integration-sending-a-slack-message.md
docs-snippets/: endpoint_basic_structure.py  playbook_basic_structure.json  replace_yourname.md  template_setup_command.md
event-deduplication/: index.html
faqs/: index.html
functions/: requirements.txt
getting-started/: index.html
key-concepts-and-terms/: index.html
(+110 files in other folders)
