# https://snarky.ca/what-the-heck-is-pyproject-toml/
[build-system]
requires = [
    "setuptools >= 40.9.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = '--cov'

[tool.coverage.run] # https://coverage.readthedocs.io/en/latest/config.html
source = ['functions', './common_files']
branch = true

[tool.coverage.report]
show_missing= true
exclude_lines = ["handle_state", "pragma: no cover"]


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37
isolated_build = True

[testenv]
commands =
    pytest -vv

setenv =
    PYTHONPATH = {toxinidir}/common_files:{toxinidir}
    SOCLESS_VAULT=mock_vault
    SOCLESS_EVENTS_TABLE=mock_events_table
    SOCLESS_PLAYBOOKS_TABLE=mock_playbooks_table
    SOCLESS_RESULTS_TABLE=mock_results_table
    SOCLESS_MESSAGE_RESPONSE_TABLE=mock_message_responses
    SOCLESS_VAULT=socless-dev-soclessvault-xxxxxxxx
    SOCLESS_DEDUP_TABLE=socless_dedup
    MOTO_ACCOUNT_ID=123456789012
    AWS_REGION=us-west-2
    AWS_DEFAULT_REGION=us-west-2
    AWS_ACCESS_KEY_ID=testing
    AWS_SECRET_ACCESS_KEY=testing
    AWS_SECURITY_TOKEN=testing
    AWS_SESSION_TOKEN=testing

deps =
    pytest
    pytest-cov
    # coverage[toml]
    moto==1.3.14
    boto3
    -r{toxinidir}/functions/requirements.txt
    -r{toxinidir}/functions/http_request/requirements.txt
"""
